--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <button type="button" class="navbar-toggle collapsed"
                         data-toggle="collapse" data-target="#barra-navegacao">
                     <span class="sr-only">Alternar navegação</span>
-                    <span class="incon-bar"></span>        
-                    <span class="incon-bar"></span>        
-                    <span class="incon-bar"></span>        
+                    <span class="icon-bar"></span>        
+                    <span class="icon-bar"></span>        
+                    <span class="icon-bar"></span>        
                 </button>
                 
                 <!-- LOGO -->
